# Proposal-Generator

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  smoke_test.ps1  start_model_tunnel.ps1
app/: __init__.py  auth.py  config.py  db.py  errors.py  kb_store.py  llm.py  logging_config.py  main.py  pdf.py  profiles.py  prompts.py  rag.py  schemas.py  services.py  storage.py
app/pdf_templates/: __init__.py  _shared.py  bold.py  classic.py  modern.py  technical.py
app/routers/: auth.py  health.py  kb.py  profile.py  sessions.py  templates.py
frontend/: app.js  index.html
frontend-react/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend-react/src/: App.jsx  main.jsx  theme.js
frontend-react/src/api/: auth.js  client.js  kb.js  profile.js  sessions.js  templates.js
frontend-react/src/components/common/: StatCard.jsx
frontend-react/src/components/layout/: AppLayout.jsx  BrandMark.jsx  Sidebar.jsx  Topbar.jsx
frontend-react/src/components/templates/: TemplatePicker.jsx  TemplatePreview.jsx
frontend-react/src/components/workspace/: ChatPanel.jsx  ExportMenu.jsx  (+3 more)
frontend-react/src/contexts/: AuthContext.jsx  ProfileContext.jsx  SessionContext.jsx  ThemeModeContext.jsx
frontend-react/src/pages/: ClientDatabasePage.jsx  DashboardPage.jsx  LoginPage.jsx  ProfilePage.jsx  WorkspacePage.jsx
knowledge_base/: README.txt
tests/: conftest.py  test_api.py  test_auth.py  test_llm.py  test_pdf.py  test_rag.py  test_storage.py
