[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jd-proposal-copilot"
version = "1.0.0"
description = "Upwork proposal copilot with RAG over past project documents."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools]
packages = ["app", "app.routers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
